# ADI_CV2

./: LICENSE  Python_basics_own.ipynb  README.md  pyproject.toml  setup.cfg
series_forcastability/: main.py
