[metadata]
name = series_forcastability
version = 0.0.1
author = Santhosh V
author_email = santhoshv40@gmail.com
description = Determine a series forecastability based on the series characteristics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santhoshv6/ADI_CV2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False